Archive2/fd/6cf0d713642bf7/output
main.cpp: In function 'int cat::func()':
main.cpp:14:9: error: redefinition of 'int cat::func()'
     int func() { return 0; }
         ^
main.cpp:5:5: error: 'int cat::func()' previously defined here
 int func() { return 0; }
     ^
